[scheduler] Fix worker scheduler shutdown.

- Use base::TimeTicks::Now as a fallback in SchedulerHelper after
TaskQueueManager was destroyed. This is needed for finalising tracing
after shutdown.
- Use thread-safe flag in WebThreadImplForWorkerScheduler to avoid race
condition.

R=alexclarke@chromium.org
BUG=788797

Change-Id: Ia3fe758a9884c11e8f83481a3d81ec8438a08863