third_party/WebKit/Source/platform/scheduler/child/scheduler_helper.cc
@@ -137,7 +137,10 @@ base::TickClock* SchedulerHelper::GetClock() const {
 }
 
 base::TimeTicks SchedulerHelper::NowTicks() const {
-  return task_queue_manager_->NowTicks();
+  if (task_queue_manager_)
+    return task_queue_manager_->NowTicks();
+  // We may need current time for tracing when shutting down worker thread.
+  return base::TimeTicks::Now();
 }
 
 }  // namespace scheduler
