third_party/WebKit/Source/platform/scheduler/child/webthread_impl_for_worker_scheduler.cc
@@ -26,7 +26,8 @@ WebThreadImplForWorkerScheduler::WebThreadImplForWorkerScheduler(
 WebThreadImplForWorkerScheduler::WebThreadImplForWorkerScheduler(
     const char* name,
     base::Thread::Options options)
-    : thread_(new base::Thread(name ? name : std::string())) {
+    : thread_(new base::Thread(name ? name : std::string())),
+      needs_shutdown_on_thread_(&needs_shutdown_on_thread_lock_) {
   bool started = thread_->StartWithOptions(options);
   CHECK(started);
   thread_task_runner_ = thread_->task_runner();
@@ -43,7 +44,7 @@ void WebThreadImplForWorkerScheduler::Init() {
 }
 
 WebThreadImplForWorkerScheduler::~WebThreadImplForWorkerScheduler() {
-  if (worker_scheduler_) {
+  if (needs_shutdown_on_thread_.IsSet()) {
     base::WaitableEvent completion(
         base::WaitableEvent::ResetPolicy::AUTOMATIC,
         base::WaitableEvent::InitialState::NOT_SIGNALED);
@@ -60,6 +61,10 @@ void WebThreadImplForWorkerScheduler::InitOnThread(
     base::WaitableEvent* completion) {
   // TODO(alexclarke): Do we need to unify virtual time for workers and the
   // main thread?
+  {
+    base::AutoLock lock(needs_shutdown_on_thread_lock_);
+    needs_shutdown_on_thread_.SetWhileLocked(true);
+  }
   worker_scheduler_ = CreateWorkerScheduler();
   worker_scheduler_->Init();
   task_queue_ = worker_scheduler_->DefaultTaskQueue();
@@ -76,6 +81,9 @@ void WebThreadImplForWorkerScheduler::InitOnThread(
 
 void WebThreadImplForWorkerScheduler::ShutdownOnThread(
     base::WaitableEvent* completion) {
+  base::AutoLock lock(needs_shutdown_on_thread_lock_);
+  needs_shutdown_on_thread_.SetWhileLocked(false);
+
   task_queue_ = nullptr;
   idle_task_runner_ = nullptr;
   web_scheduler_ = nullptr;
