third_party/WebKit/Source/platform/scheduler/child/webthread_impl_for_worker_scheduler.h
@@ -6,7 +6,9 @@
 #define THIRD_PARTY_WEBKIT_SOURCE_PLATFORM_SCHEDULER_CHILD_WEBTHREAD_IMPL_FOR_WORKER_SCHEDULER_H_
 
 #include "base/message_loop/message_loop.h"
+#include "base/synchronization/lock.h"
 #include "base/threading/thread.h"
+#include "platform/scheduler/child/pollable_thread_safe_flag.h"
 #include "public/platform/WebPrivatePtr.h"
 #include "public/platform/scheduler/child/webthread_base.h"
 
@@ -73,6 +75,9 @@ class PLATFORM_EXPORT WebThreadImplForWorkerScheduler
   scoped_refptr<TaskQueue> task_queue_;
   scoped_refptr<scheduler::SingleThreadIdleTaskRunner> idle_task_runner_;
   WebPrivatePtr<WebTaskRunnerImpl> web_task_runner_;
+
+  base::Lock needs_shutdown_on_thread_lock_;
+  PollableThreadSafeFlag needs_shutdown_on_thread_;
 };
 
 }  // namespace scheduler
